error-in-wallaby-console.txt
wallaby.js started
core v1.0.634
Runtime error: Jest encountered an unexpected token

This usually means that you are trying to import a file which Jest cannot parse, e.g. it's not plain JavaScript.

By default, if Jest sees a Babel config, it will use that to transform your files, ignoring "node_modules".

Here's what you can do:
 • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
 • If you need a custom transformation specify a "transform" option in your config.
 • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

You'll find more details and examples of these config options in the docs:
https://jestjs.io/docs/en/configuration.html

Details:

.\__tests__\index.test.js:6
import { shallow } from 'enzyme';
       ^

SyntaxError: Unexpected token {
    at new Script (vm.js:79:7)
    at ScriptTransformer._transformAndBuildScript (C:\Projects\with-jest-wallaby\node_modules\jest-runtime\build\script_transformer.js:400:17)
    at ScriptTransformer.transform (C:\Projects\with-jest-wallaby\node_modules\jest-runtime\build\script_transformer.js:445:19)
    at Runtime._execModule (C:\Projects\with-jest-wallaby\node_modules\jest-runtime\build\index.js:640:53)
    at Runtime.requireModule (C:\Projects\with-jest-wallaby\node_modules\jest-runtime\build\index.js:376:14)
    at C:\Projects\with-jest-wallaby\node_modules\jest-jasmine2\build\index.js:129:13
    at Generator.next (<anonymous>)
    at step (C:\Projects\with-jest-wallaby\node_modules\jest-jasmine2\build\index.js:170:30)
    at C:\Projects\with-jest-wallaby\node_modules\jest-jasmine2\build\index.js:189:14
    at new Promise (<anonymous>)
    at C:\Projects\with-jest-wallaby\node_modules\jest-jasmine2\build\index.js:167:12
    at jasmine2 (C:\Projects\with-jest-wallaby\node_modules\jest-jasmine2\build\index.js:138:17)
    at C:\Projects\with-jest-wallaby\node_modules\jest-runner\build\run_test.js:187:24
    at Generator.next (<anonymous>)
    at step (C:\Projects\with-jest-wallaby\node_modules\jest-runner\build\run_test.js:315:30)
    at C:\Projects\with-jest-wallaby\node_modules\jest-runner\build\run_test.js:326:15
    at process._tickCallback (internal/process/next_tick.js:68:7)
console.log: FAIL __tests__/index.test.js

console.log:   ● Test suite failed to run

    Jest encountered an unexpected token

    This usually means that you are trying to import a file which Jest cannot parse, e.g. it's not plain JavaScript.

    By default, if Jest sees a Babel config, it will use that to transform your files, ignoring "node_modules".

    Here's what you can do:
     • To have some of your "node_modules" files transformed, you can specify a custom "transformIgnorePatterns" in your config.
     • If you need a custom transformation specify a "transform" option in your config.
     • If you simply want to mock your non-JS modules (e.g. binary assets) you can stub them out with the "moduleNameMapper" config option.

    You'll find more details and examples of these config options in the docs:
    https://jestjs.io/docs/en/configuration.html

    Details:

    C:\Users\mebrein\.WebStorm2018.2\system\wallaby\projects\d85a6d94c881c889\instrumented\__tests__\index.test.js:6
    import { shallow } from 'enzyme';
           ^

    SyntaxError: Unexpected token {
      at ScriptTransformer._transformAndBuildScript (node_modules/jest-runtime/build/script_transformer.js:400:17)
      at Runtime.d._wallabyReplaced.c.requireModule (../../Users/Merijn/.WebStorm2018.2/system/wallaby/wallaby/runners/node/jest@0.4.3/initializer.js:14:22691)

